--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -36,11 +36,14 @@
 }
 
 .cta {
-  border: 1.5px solid white;
-  background: transparent;
+background: rgba(255, 255, 255, 0.12); /* light transparent layer */
+  backdrop-filter: blur(10px); /* adds the glass effect */
+  border: 3px solid rgb(255, 255, 255); /* subtle border */
+  border-radius: 0.75rem;
   color: white;
-  font-size: 1rem;
-  padding: 1.1em 2.5rem;
+  font-size: 1.35rem;
+  font-weight: bold;
+  padding: .75em 1.4rem;
   border-radius: 30px;
   cursor: pointer;
   transition: background 0.3s ease;
